--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -3,12 +3,14 @@
   padding: 30px;
   margin-top: 60px;
   width: 100%;
+  height: 100px;
+  position: fixed;
+  z-index: 1;
 }
 
 .legal-header h1 {
-  width: 100%;
-  max-width: 900px;
-  margin: 0 auto;
+  left: 25%;
+  position: fixed;
 }
 
 main {
@@ -23,6 +25,15 @@ section {
   max-width: 900px;
   margin: 0 auto;
   color: white;
+  top:150px;
+
+}
+
+span{
+  position: sticky;
+  padding: 10px 15px;
+  height: 100%;
+  top: 200px;
 }
 
 .section-label {
@@ -32,15 +43,19 @@ section {
   padding: 10px 16px;
 }
 
+
 .document-content {
   display: flex;
   flex-direction: column;
   gap: 30px;
   max-width: 600px;
+  position: relative;
+  bottom: 75px;
 }
 
 .document-content p {
   line-height: 28px;
+  position: sticky;
 }
 
 .document-content ol {
@@ -59,6 +74,8 @@ footer {
   background-color: #e2e2e2;
   padding: 0 30px;
   min-height: 70px;
+  position: fixed;
+  bottom: 0px;
 }
 
 .footer-content {
