--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,25 +1,73 @@
 .robot-container {
+    position: static;
+    width: 100%;
+    height: 100%;
+    background-color: #042c83;
 }
 
 .robot-face-shape {
+    position: fixed;
+    height: 500px;
+    width: 600px;
+    background-color: slategray;
+    border-width: 5px;
+    top: 250px;
+    left: 600px;
+    border-radius: 25%;
 }
 
 .robot-eye-left {
+    position: absolute;
+    border-radius: 30%;
+    background-color: red;
+    width: 45px;
+    height: 45px;
+    margin: 30% 30%;
 }
 
 .robot-eye-right {
+    position: absolute;
+    border-radius: 30%;
+    background-color: red;
+    width: 45px;
+    height: 45px;
+    margin: 30% 60%;
 }
 
 .robot-ear-left {
+    width: 100px;
+    height: 100px;
+    background-color: black;
+    position: relative;
+    top: 450px;
+    left: 500px;
 }
 
 .robot-ear-right {
+    width: 100px;
+    height: 100px;
+    background-color: black;
+    position: relative;
+    top: 350px;
+    left: 1200px;
 }
 
 .robot-nose {
+    width: 50px;
+    height: 50px;
+    background-color: green;
+    position: absolute;
+    top: 250px;
+    left: 45%;
 }
 
-.robot-teeth {
+.robot-mouth {
+    width: 230px;
+    height: 100px;
+    background-color: black;
+    position: absolute;
+    top: 350px;
+    left: 30%;
 }
 
 .robot-tooth {
