--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100%;
     background-color: #042c83;
+    align-items: center;
 }
 
 .robot-face-shape {
@@ -14,6 +15,7 @@
     top: 250px;
     left: 600px;
     border-radius: 25%;
+    align-self:;
 }
 
 .robot-eye-left {
@@ -22,7 +24,7 @@
     background-color: red;
     width: 45px;
     height: 45px;
-    margin: 30% 30%;
+    margin: 150px 200px;
 }
 
 .robot-eye-right {
@@ -31,7 +33,7 @@
     background-color: red;
     width: 45px;
     height: 45px;
-    margin: 30% 60%;
+    margin: 150px 360px;
 }
 
 .robot-ear-left {
@@ -57,8 +59,8 @@
     height: 50px;
     background-color: green;
     position: absolute;
-    top: 250px;
-    left: 45%;
+    top: 235px;
+    left: 280px;
 }
 
 .robot-mouth {
@@ -67,7 +69,7 @@
     background-color: black;
     position: absolute;
     top: 350px;
-    left: 30%;
+    left: 190px;
 }
 
 .robot-tooth {
