--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,88 +1,135 @@
 .robot-container {
-    position: static;
+    position: relative;
     width: 100%;
-    height: 100%;
-    background-color: #042c83;
+    height: 100vh;
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    display: flex;
+    justify-content: center;
     align-items: center;
+    padding-top: 60px; /* Account for header */
 }
 
 .robot-face-shape {
-    position: fixed;
-    height: 500px;
-    width: 600px;
-    background-color: slategray;
-    border-width: 5px;
-    top: 250px;
-    left: 600px;
-    border-radius: 25%;
-    align-self:;
+    position: relative;
+    height: 400px;
+    width: 500px;
+    background-color: #708090;
+    border: 8px solid #2c3e50;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .robot-eye-left {
     position: absolute;
-    border-radius: 30%;
-    background-color: red;
-    width: 45px;
-    height: 45px;
-    margin: 150px 200px;
+    border-radius: 50%;
+    background: radial-gradient(circle, #ff6b6b, #ee5a24);
+    width: 60px;
+    height: 60px;
+    top: 80px;
+    left: 120px;
+    opacity: 0.9;
 }
 
 .robot-eye-right {
     position: absolute;
-    border-radius: 30%;
-    background-color: red;
-    width: 45px;
-    height: 45px;
-    margin: 150px 360px;
+    border-radius: 50%;
+    background: radial-gradient(circle, #ff6b6b, #ee5a24);
+    width: 60px;
+    height: 60px;
+    top: 80px;
+    right: 120px;
+    opacity: 0.9;
 }
 
 .robot-ear-left {
-    width: 100px;
-    height: 100px;
-    background-color: black;
-    position: relative;
-    top: 450px;
-    left: 500px;
+    width: 80px;
+    height: 120px;
+    background: url('https://picsum.photos/80/120?random=1') center/cover;
+    position: absolute;
+    top: 50%;
+    left: -90px;
+    transform: translateY(-50%);
+    border-radius: 15px 0 0 15px;
+    border: 3px solid #34495e;
 }
 
 .robot-ear-right {
-    width: 100px;
-    height: 100px;
-    background-color: black;
-    position: relative;
-    top: 350px;
-    left: 1200px;
+    width: 80px;
+    height: 120px;
+    background: url('https://picsum.photos/80/120?random=2') center/cover;
+    position: absolute;
+    top: 50%;
+    right: -90px;
+    transform: translateY(-50%);
+    border-radius: 0 15px 15px 0;
+    border: 3px solid #34495e;
 }
 
 .robot-nose {
-    width: 50px;
-    height: 50px;
-    background-color: green;
+    width: 40px;
+    height: 60px;
+    background-color: #27ae60;
     position: absolute;
-    top: 235px;
-    left: 280px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 }
 
 .robot-mouth {
-    width: 230px;
-    height: 100px;
-    background-color: black;
+    width: 60%;
+    height: 80px;
+    background-color: #2c3e50;
     position: absolute;
-    top: 350px;
-    left: 190px;
+    bottom: 60px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px;
 }
 
 .robot-tooth {
+    width: 15px;
+    height: 25px;
+    background-color: white;
+    border-radius: 0 0 5px 5px;
+    opacity: 0.5;
 }
 
 .robot-hair-style {
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 20px;
 }
 
 .robot-hair-one {
+    width: 30px;
+    height: 50px;
+    background: linear-gradient(45deg, #9b59b6, #8e44ad);
+    border-radius: 15px 15px 0 0;
+    transform: rotate(-15deg);
 }
 
 .robot-hair-two {
+    width: 25px;
+    height: 60px;
+    background: linear-gradient(45deg, #9b59b6, #8e44ad);
+    border-radius: 12px 12px 0 0;
+    transform: rotate(5deg);
 }
 
 .robot-hair-three {
+    width: 35px;
+    height: 45px;
+    background: linear-gradient(45deg, #9b59b6, #8e44ad);
+    border-radius: 17px 17px 0 0;
+    transform: rotate(15deg);
 }
