--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -23,48 +23,38 @@
 
 .robot-eye-left {
     position: absolute;
-    border-radius: 50%;
-    background: radial-gradient(circle, #ff6b6b, #ee5a24);
-    width: 60px;
-    height: 60px;
-    top: 80px;
-    left: 120px;
-    opacity: 0.9;
+    border-radius: 30%;
+    background-color: red;
+    width: 45px;
+    height: 45px;
+    margin: 150px 200px;
 }
 
 .robot-eye-right {
     position: absolute;
-    border-radius: 50%;
-    background: radial-gradient(circle, #ff6b6b, #ee5a24);
-    width: 60px;
-    height: 60px;
-    top: 80px;
-    right: 120px;
-    opacity: 0.9;
+    border-radius: 30%;
+    background-color: red;
+    width: 45px;
+    height: 45px;
+    margin: 150px 360px;
 }
 
 .robot-ear-left {
-    width: 80px;
-    height: 120px;
-    background: url('https://picsum.photos/80/120?random=1') center/cover;
-    position: absolute;
-    top: 50%;
-    left: -90px;
-    transform: translateY(-50%);
-    border-radius: 15px 0 0 15px;
-    border: 3px solid #34495e;
+    width: 100px;
+    height: 100px;
+    background-color: black;
+    position: relative;
+    top: 450px;
+    left: 500px;
 }
 
 .robot-ear-right {
-    width: 80px;
-    height: 120px;
-    background: url('https://picsum.photos/80/120?random=2') center/cover;
-    position: absolute;
-    top: 50%;
-    right: -90px;
-    transform: translateY(-50%);
-    border-radius: 0 15px 15px 0;
-    border: 3px solid #34495e;
+    width: 100px;
+    height: 100px;
+    background-color: black;
+    position: relative;
+    top: 350px;
+    left: 1200px;
 }
 
 .robot-nose {
@@ -94,67 +84,13 @@
 }
 
 .robot-tooth {
-    width: 15px;
-    height: 25px;
-    background-color: white;
-    border-radius: 0 0 5px 5px;
-    opacity: 0.5;
 }
 
 /* Rosie-style doily hair */
 .robot-hair-style {
-    position: absolute;
-    top: -80px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 300px;
-    height: 120px;
 }
 
-/* Main doily base */
-.robot-hair-style::before {
-    content: '';
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 280px;
-    height: 80px;
-    background: linear-gradient(45deg, #f8f9fa, #e9ecef);
-    border-radius: 50%;
-    border: 3px solid #6c757d;
-    box-shadow: inset 0 0 20px rgba(0,0,0,0.1);
-}
-
-/* Doily decorative pattern */
-.robot-hair-style::after {
-    content: '';
-    position: absolute;
-    top: 30px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 260px;
-    height: 60px;
-    background: 
-        radial-gradient(circle at 20% 50%, transparent 8px, #6c757d 9px, #6c757d 10px, transparent 11px),
-        radial-gradient(circle at 40% 30%, transparent 6px, #6c757d 7px, #6c757d 8px, transparent 9px),
-        radial-gradient(circle at 60% 70%, transparent 6px, #6c757d 7px, #6c757d 8px, transparent 9px),
-        radial-gradient(circle at 80% 50%, transparent 8px, #6c757d 9px, #6c757d 10px, transparent 11px),
-        radial-gradient(circle at 50% 50%, transparent 12px, #6c757d 13px, #6c757d 14px, transparent 15px);
-    border-radius: 50%;
-}
-
-/* Doily scalloped edges */
 .robot-hair-one {
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    background: linear-gradient(45deg, #f8f9fa, #e9ecef);
-    border: 2px solid #6c757d;
-    border-radius: 50%;
-    top: 15px;
-    left: 30px;
-    transform: rotate(-30deg);
 }
 
 .robot-hair-two {
